--- a/documents/PWA-100.md
+++ b/documents/PWA-100.md
@@ -2,7 +2,7 @@
 
 ## Stage and Controller
 - Tsukumo Engineering, Automatic Polarizer Holder (PWA-100) [[Web]](http://www.twin9.co.jp/product/holders-list/mirror-list-2-2/pwa-100/)
-- OptoSigma, Single axis Stage Controller (GSC-01) [[Web]](http://www.twin9.co.jp/product/holders-list/mirror-list-2-2/pwa-100/) [[Manual]](https://jp.optosigma.com/html/en_jp/software/motorize/manual_en/GSC-01_En.pdf)
+- OptoSigma, Single axis Stage Controller (GSC-01) [[Web]](https://jp.optosigma.com/en_jp/motorized-stages/controllers-drivers/single-axis-stage-controller/gsc-01.html) [[Manual]](https://jp.optosigma.com/html/en_jp/software/motorize/manual_en/GSC-01_En.pdf)
 
 [![](https://img.youtube.com/vi/dfmbfFGqxJw/0.jpg)](https://www.youtube.com/watch?v=dfmbfFGqxJw)
 
